5d (0.5.0) unstable; urgency=low

  * add base case to module dispatcher.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sun, 11 Mar 2012 11:36:00 +0100

5d (0.4.1) unstable; urgency=low

  * add strcat

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Tue, 06 Mar 2012 20:38:00 +0100

5d (0.4.0) unstable; urgency=low

  * make names of all monadic fns end on "!" if alphanumeric.
  * fix conversions to C primitives.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Fri, 02 Mar 2012 01:36:00 +0100

5d (0.3.7) unstable; urgency=low

  * switch to our own HashTable implementation.
  * make 'makeFn work.
  * make TUI locale-aware.
  * make GUI locale-aware.
  * add support for unaligned data (not the default, though) to 'packRecord etc.
  * fix bug in listFromStr so that (listFromStr "") works.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Tue, 28 Feb 2012 23:46:00 +0100

5d (0.3.6) unstable; urgency=low

  * add "parseMath" and "parseMathStr" to module "Reflection".

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sat, 25 Feb 2012 19:39:00 +0100

5d (0.3.5) unstable; urgency=low

  * add default trampoline (fallback).
  * change prompt.
  * fix packRecord to work with (string) pointers.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Sat, 18 Feb 2012 17:32:00 +0100

5d (0.3.4) unstable; urgency=low

  * add 'list?
  * make LATEX output nicer (still sometimes messes up on 1:[] ).
  * fix divrem (again)
  * fix sin
  * add 'elif'
  * add 'export' keyword to mark for find5DExports
  * add PATHMAX (for PATH_MAX).
  * add 'allocateMemory'.

 -- Danny Milosavljevic <danny_milo@yahoo.com>  Thu, 09 Feb 2012 10:14:00 +0100

5d (0.3.3) unstable; urgency=low

  * provide builtin (:) when loading a module so it doesn't try to load the List module in order to get it.
  * fix sign of divrem (Float) division result.
  * add floor, ceil, round1.
  * add some more math operators to the Scanner special-case.
